@@ -905,6 +905,19 @@ long DecodeKernel(void *binary, entry_t *rentry, char **raddr, int *rsize)
 			error("ERROR: kernel compression is bad!\n");
 			return -1;
 		}
+
+		if (kernel_header->compress_type == OSSwapBigToHostConstInt32('lzss'))
+		{
+			verbose ("Decompressing Kernel Using lzss\n");
+		}
+		else
+		{
+			if (kernel_header->compress_type == OSSwapBigToHostConstInt32('lzvn'))
+			{
+				verbose ("Decompressing Kernel Using lzvn\n");
+			}
+		}
+
 #if NOTDEF
 		if (kernel_header->platform_name[0] && strcmp(gPlatformName, kernel_header->platform_name))
 		{
@@ -924,7 +937,7 @@ long DecodeKernel(void *binary, entry_t *rentry, char **raddr, int *rsize)
 		switch (kernel_header->compress_type)
 		{
 			case OSSwapBigToHostConstInt32('lzvn'):
-				size = decompress_lzvn( binary, uncompressed_size, &kernel_header->data[0], OSSwapBigToHostInt32(kernel_header->compressed_size));
+				size = lzvn_decode( binary, uncompressed_size, &kernel_header->data[0], OSSwapBigToHostInt32(kernel_header->compressed_size));
 				break;
 
 			case OSSwapBigToHostConstInt32('lzss'):
